--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "deploy": "sh scripts/deploy.sh"
   },
   "dependencies": {
+    "@types/react-transition-group": "^4.4.5",
     "echarts": "^5.3.2",
     "history": "4.9.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-router-dom": "5.2.0"
+    "react-router-dom": "5.2.0",
+    "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
     "@types/history": "4.7.8",
